# SRU2

./: CLAUDE.md
SRU2/: LocalTestRun.testrunconfig  SRU2.sln  SRU2.vsmdi
csru/: .gitignore  Makefile  Makefile.in  a.sru  ast.cc  ast.h  ast_class.cc  ast_class.h  ast_test.cc  basic_object.cc  basic_object.h  basic_object_test.cc  binding.cc  binding.h  binding_test.cc  boolean.cc  boolean.h  boolean_test.cc  class.cc  class.h  class_test.cc  constants.h  constants_generator.rb  interpreter.cc  interpreter.h  interpreter_test.cc  library.cc  library.h  library_test.cc  load.cc  load.h  logging.cc  logging.h  main.cc  makefile.depend  native_proc.cc  native_proc.h  native_proc_test.cc  nil.cc  nil.h  (+70 more)
memo/: naming.txt  scheme-like.txt  spec_00_overview.md  spec_01_lexical.md  spec_02_grammar.md  spec_03_semantics.md  spec_04_builtins.md  spec_05_runtime.md  stack_frame.txt  syntax.txt  tutorial.txt
rsru/: Cargo.toml  design_00_overview.md  design_01_object_model.md  design_02_gc.md  design_03_parser_ast.md  design_04_evaluator.md  design_05_builtins.md  design_06_bytecode.md  design_07_build.md
rsru/plugins/hello/: Cargo.toml
rsru/plugins/hello/src/: lib.rs
rsru/src/: ast.rs  builtin.rs  eval.rs  gc.rs  heap.rs  lib.rs  main.rs  object.rs  parser.rs  prelude.sru  symbol.rs  vm.rs
rsru/src/builtin/: array.rs  boolean.rs  ffi.rs  hash.rs  io.rs  math.rs  numeric.rs  object_cls.rs  parser_obj.rs  proc.rs  string.rs  sys.rs
rsru/src/bytecode/: compile.rs  decode.rs  encode.rs  mod.rs
rsru/tests/: integration.rs
sru2/: SRU2.sln
tests/: README.md  bst.sru  (+24 more)
(+55 files in other folders)
