[package]
name = "rsru"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["plugins/hello"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "rsru"
path = "src/main.rs"

[[bin]]
name = "rsruc"
path = "src/bin/rsruc.rs"

[profile.release]
opt-level = 3

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
